<resources>
    <string name="app_name">NiceOrd Agent</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="send_email">Request OTP on E-mail</string>
    <string name="hello_blank_fragment">Login Fragment</string>
    <string name="enterMobile">Mobile Number</string>
    <string name="enterPassword">Password</string>
    <string name="firstName">Shop Name</string>
    <string name="lastName">Store/Restaurant/Shop</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="emailId">Email ID</string>
    <string name="shopType">Shop Type</string>
    <string name="sittingSystem">Sitting System</string>
    <string name="pleaseEnterValidMobileNumber">Please enter valid Mobile Number</string>
    <string name="pleaseEnterMobileNumber">Please enter Mobile Number</string>
    <string name="pleaseEnterFirstName">Please enter Shop Name</string>
    <string name="pleaseEnterLastName">Please enter Store,Restaurant or Shop</string>
    <string name="pleaseSelectShopType">Please select your Shop Type</string>
    <string name="pleaseSelectSittingSystem">Please select Sitting System</string>
    <string name="pleaseEnterEmailId">Please enter Email ID</string>
    <string name="pleaseEnterValidEmailId">Please enter valid Email ID</string>
    <string name="Grocery">Grocery</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Bar">Bar</string>
    <string name="search_category">Search Category</string>
    <string name="enterCategoryName">Category Name</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="category">CATEGORY</string>
    <string name="category_lowercase">Category:</string>
    <string name="productTitle">Product Title</string>
    <string name="productQuantity">Product Quantity</string>
    <string name="productPrice">Product Price</string>
    <string name="pleaseTapOnAddBtn">Please Tap on top right corner (Add Button) for uploading Category.</string>
    <string name="pleaseTapOnAddBtn1">Please Tap on top right corner (Add Button) for uploading Product.</string>
    <string name="nav_header_desc">Header Image</string>
    <string name="nav_header_userName">User Name</string>
    <string name="nav_header_userNumber">Mobile Number</string>
    <string name="orders">Orders</string>
    <string name="order_history">Order History</string>
    <string name="notification">Notification</string>
    <string name="qr_code">QR Code</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="product_details">Product Details</string>
    <string name="download_qr_code">Download QR Code</string>
    <string name="ok">OK</string>
    <string name="new_user">New user?</string>
    <string name="have_account">have an account?</string>
    <string name="register">Register</string>
    <string name="pleaseenter_password">Please enter Password</string>
    <string name="pleaseenter_password_six_digits">The password must be at least 6 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="createPassword">Create Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="logout">Logout</string>
    <string name="please_categoryName">Please enter Category Name</string>
    <string name="fromGallery">Gallery</string>
    <string name="uploadImage">Upload Image</string>
    <string name="permission_denied">Permission denied</string>
    <string name="imagePath_null">ImagePath is null</string>
    <string name="please_uploadImage">Please upload Image.</string>
    <string name="product">Product: </string>
    <string name="quantity">"Quantity: "</string>
    <string name="price">"Price: "</string>
    <string name="please_productQuantity">Please enter Product quantity</string>
    <string name="please_productPrice">Please enter Product price</string>
    <string name="please_productName">Please enter Product Name</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="add_category">Add Category</string>
    <string name="please_confirm_password">Please confirm Password</string>
    <string name="please_match_pasword">Please match Password</string>
    <string name="list_is_empty">List is empty</string>
    <string name="search_product">Search Product</string>
    <string name="no_found">No found</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>
    <string name="preparing">Preparing</string>
    <string name="ready_to_deliver">Ready to Deliver</string>
    <string name="delivered">Delivered \u2713</string>
    <string name="deliver">Delivered</string>
    <string name="deliverr">Deliver</string>
    <string name="rejected">Rejected \u2713</string>
    <string name="prdouct_quantity">"Product Quantity:"</string>
    <string name="orders_details">Order Details</string>
    <string name="item">ITEM</string>
    <string name="qty">Qty</string>
    <string name="rs">Rs</string>
    <string name="sub_total">Sub Total (Exclusive of GST)</string>
    <string name="check_internet">Please check Internet connection</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation_msg">Are you sure you want to Logout?</string>
    <string name="delete_confirmation_msg">Are you sure you want to delete account?<br>\nA request will be sent to admin</br> </string>
    <string name="delete_category_confirmation_msg">Are you sure you want to delete this Category?</string>
    <string name="delete_product_confirmation_msg">Are you sure you want to delete this Product?</string>
    <string name="wait_for_active">Please wait until your account is Active by Admin</string>
    <string name="changePassword">Change Password</string>
    <string name="pleaseenter_old_password">Please enter old Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="customer_detail">Customer Details</string>
    <string name="name">Name</string>
    <string name="delete">Delete Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="order_type">Order Type</string>
    <string name="address">Address</string>
    <string name="products">Product:</string>
    <string name="orderId">Order Id: </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of NiceOrd is available. Please update to new version</string>
    <string name="youAreNotUpdatedMessage1">now</string>
    <string name="update">Update</string>
    <string name="dismiss">Dismiss</string>
</resources>