<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.niceord.agent.viewModels.SignUpModel" />

    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:id="@+id/parentView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_150"
            android:layout_gravity="center"
            android:src="@drawable/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dimen_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/top_corner_rounded_white"
            android:orientation="vertical">



        <ScrollView
            android:scrollbars="none"
            android:layout_weight="1"
            android:background="@drawable/top_corner_rounded_white"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_40"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/firstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/firstName"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/display_text_size"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:background="@drawable/outer_line_fields_shape"/>

                <EditText
                    android:id="@+id/lastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/lastName"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/display_text_size"
                    android:importantForAutofill="noExcludeDescendants"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:background="@drawable/outer_line_fields_shape"/>

                <EditText
                    android:id="@+id/mobileNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/mobileNumber"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="number"
                    android:digits="1234567890"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/outer_line_fields_shape"/>

                <EditText
                    android:id="@+id/emailIdET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/emailId"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:importantForAutofill="noExcludeDescendants"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/outer_line_fields_shape"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundMode="none"
                    android:textColorHint="@color/grey"
                    android:layout_marginTop="@dimen/dimen_10"
                    app:hintEnabled="false"


                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dimen_12"
                        android:paddingBottom="@dimen/dimen_12"
                        android:hint="@string/createPassword"
                        android:paddingLeft="@dimen/dimen_10"
                        android:paddingRight="@dimen/dimen_10"
                        android:textColor="@color/black"
                        android:fontFamily="@font/calibri_regular"
                        android:singleLine="true"
                        android:textColorHint="@color/grey"
                        android:inputType="textPassword"
                        android:textSize="@dimen/display_text_size"
                        android:importantForAutofill="noExcludeDescendants"
                        android:background="@drawable/outer_line_fields_shape"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundMode="none"
                    android:textColorHint="@color/grey"
                    android:layout_marginTop="@dimen/dimen_10"
                    app:hintEnabled="false"


                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/confirmPasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dimen_12"
                        android:paddingBottom="@dimen/dimen_12"
                        android:hint="@string/confirmPassword"
                        android:paddingLeft="@dimen/dimen_10"
                        android:paddingRight="@dimen/dimen_10"
                        android:textColor="@color/black"
                        android:fontFamily="@font/calibri_regular"
                        android:singleLine="true"
                        android:textColorHint="@color/grey"
                        android:inputType="textPassword"
                        android:importantForAutofill="noExcludeDescendants"
                        android:textSize="@dimen/display_text_size"
                        android:background="@drawable/outer_line_fields_shape"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/shopTypeTV"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_14"
                    android:paddingBottom="@dimen/dimen_14"
                    android:hint="@string/shopType"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/outer_line_fields_shape"/>

                <TextView
                    android:id="@+id/sittingSystemTV"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_14"
                    android:paddingBottom="@dimen/dimen_14"
                    android:hint="@string/sittingSystem"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/calibri_regular"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/outer_line_fields_shape"/>


            </LinearLayout>

        </LinearLayout>
        </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_black_color"
                    android:textSize="@dimen/dimen_18"
                    android:text="@string/have_account"/>

                <TextView
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_color"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:textSize="@dimen/dimen_18"
                    android:text="@string/login"/>


            </LinearLayout>
        <LinearLayout
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/dimen_40"
            android:layout_marginLeft="@dimen/dimen_40"
            android:background="@drawable/round_btn_shape"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/common_btn_text_size"
                android:layout_gravity="center"
                android:fontFamily="@font/calibri_regular"
                android:textColor="@color/white"
                android:gravity="center"/>

        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
</layout>