<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_20"
    android:background="@drawable/popup_rounded_bg"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="@dimen/dimen_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30" />

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_regular"
            android:textColor="@color/light_black_color"
            android:textSize="@dimen/common_btn_text_size" />



        <ImageView
            android:id="@+id/crossBtn"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:layout_width="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_20"
            android:background="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout

        android:padding="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <LinearLayout
                android:layout_margin="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                android:id="@+id/productTitleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_12"
                android:paddingBottom="@dimen/dimen_12"
                android:hint="@string/productTitle"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10"
                android:textColor="@color/black"
                android:fontFamily="@font/calibri_regular"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:inputType="textCapWords"
                android:textSize="@dimen/display_text_size"
                android:background="@drawable/white_rounded_bg"/>

                <EditText
                    android:id="@+id/productPriceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/productPrice"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:textColorHint="@color/grey"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/white_rounded_bg"/>


                <EditText
                    android:id="@+id/productQuantityET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12"
                    android:hint="@string/productQuantity"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@color/black"
                    android:fontFamily="@font/calibri_regular"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:textColorHint="@color/grey"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/display_text_size"
                    android:background="@drawable/white_rounded_bg"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/uploadedImgCV"
                    android:layout_width="@dimen/dimen_100"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/dimen_10"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_height="@dimen/dimen_150">
                    <ImageView
                        android:id="@+id/setUploadedImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadImage"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginHorizontal="@dimen/dimen_10"
                    android:textSize="@dimen/display_text_size"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/takePhotoBtn"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/white_rounded_bg"
                        android:gravity="center"
                        android:layout_height="@dimen/dimen_50">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera"
                            android:textSize="@dimen/display_text_size"
                            android:layout_gravity="center"
                            android:fontFamily="@font/calibri_regular"
                            android:textColor="@color/black"
                            android:gravity="center"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="or"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="@dimen/dimen_10"
                        android:textSize="@dimen/dimen_18"/>

                    <LinearLayout
                        android:id="@+id/gallaryBtn"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:background="@drawable/white_rounded_bg"
                        android:gravity="center"
                        android:layout_height="@dimen/dimen_50">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fromGallery"
                            android:textSize="@dimen/display_text_size"
                            android:layout_gravity="center"
                            android:fontFamily="@font/calibri_regular"
                            android:textColor="@color/black"
                            android:gravity="center"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            </ScrollView>
                <LinearLayout
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_marginRight="@dimen/dimen_40"
                    android:layout_marginLeft="@dimen/dimen_40"
                    android:background="@drawable/round_btn_shape"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_height="@dimen/dimen_50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="@dimen/common_btn_text_size"
                        android:layout_gravity="center"
                        android:fontFamily="@font/calibri_regular"
                        android:textColor="@color/white"
                        android:gravity="center"/>

                </LinearLayout>
    </LinearLayout>
</LinearLayout>